Specified Avatar. update-home-html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-
+<img src="{{ site.baseurl }}/ChristopherGaughan-github-io/beautiful-jekyll/assets/Chris_Avatar.JPG" alt="Chris Avatar">
 {{ content }}
 
 {% assign posts = paginator.posts | default: site.posts %}
